show log outputs in nb

--- a/llm_inference/Untitled-1.ipynb
+++ b/llm_inference/Untitled-1.ipynb
@@ -97,6 +97,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float32[1, 18, 4096](73728, 4096, 1)<aa928465160a2bcfd32412cd6b89f643>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<ea28606193535faac892c356b85c8807>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<2c0d38265766b48fc78daaa38fe144ba>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<7b0c2c08c0eff261564cbc49f16f354e>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<55013c178394e6555d3e23840057e08e>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<f5e6133cfd303d05d68f5eba51666655>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat /tmp/deeptrust-commits/1729417546.log"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -119,6 +151,38 @@
     "\n",
     "#commit_file.write(input_text)\n",
     "commit_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float32[1, 18, 4096](73728, 4096, 1)<aa928465160a2bcfd32412cd6b89f643>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<ea28606193535faac892c356b85c8807>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<2c0d38265766b48fc78daaa38fe144ba>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<7b0c2c08c0eff261564cbc49f16f354e>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<55013c178394e6555d3e23840057e08e>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<f5e6133cfd303d05d68f5eba51666655>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat /tmp/deeptrust-commits/1729417547.log"
    ]
   },
   {
@@ -182,6 +246,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float32[1, 18, 2048](36864, 2048, 1)<01999b437754b382a5d466021fe4f175>\n",
+      "float32[1, 1, 2048](2048, 2048, 1)<4a56879d7b923d315eda99c1e5e46c9f>\n",
+      "float32[1, 1, 2048](2048, 2048, 1)<893ffac03114273f2b8b9beecf2b0d03>\n",
+      "float32[1, 1, 2048](2048, 2048, 1)<7bc1154582a3e231ff8079006d3312c9>\n",
+      "float32[1, 1, 2048](2048, 2048, 1)<d204ed4251bd8680be1e1715409a4739>\n",
+      "float32[1, 1, 2048](2048, 2048, 1)<fe9ca2be2d40ec3c213093473404f72e>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat /tmp/deeptrust-commits/1729417616.log"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -208,10 +304,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float32[1, 18, 4096](73728, 4096, 1)<aa928465160a2bcfd32412cd6b89f643>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<6061c917900a759f57dc24bae4fbd9ad>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<43d7b70fcc5c04413e65a84ddee26f9d>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<9bf521e8f4e64a971ac986495f76c750>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<8476cb21a29ef9412248b27c6afba64b>\n",
+      "float32[1, 1, 4096](4096, 4096, 1)<0066153bfb74cf46dbeed9ed18317638>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat /tmp/deeptrust-commits/1729417619.log"
+   ]
   },
   {
    "cell_type": "markdown",
