redo with timing

--- a/llm_inference/Untitled-1.ipynb
+++ b/llm_inference/Untitled-1.ipynb
@@ -11,11 +11,12 @@
      "text": [
       "/root/miniconda3/envs/deeptrust/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 4/4 [00:27<00:00,  6.82s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:27<00:00,  6.88s/it]\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
     "import torch\n",
     "from transformers import AutoTokenizer\n",
     "from deeptrust.models.llama.modeling_llama import LlamaForCausalLM\n",
@@ -59,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<|begin_of_text|>What is proto-danksharding and how is it related to eth sharding? \n",
+      "<|begin_of_text|>What is proto-danksharding and how is it related to eth sharding??\n",
       "Proto-danksharding\n"
      ]
     }
@@ -81,7 +82,9 @@
     "    generation_config={\"do_sample\": True, \"max_length\": 24, \"num_return_sequences\": 1},\n",
     ")\n",
     "\n",
-    "output = model.generate(input_ids.cuda(), do_sample=True, max_length=24, num_return_sequences=1)\n",
+    "start_time = time.time()\n",
+    "output = model.generate(input_ids.cuda(), **model.deeptrust_commit.generation_config)\n",
+    "time_taken = time.time() - start_time\n",
     "\n",
     "model.deeptrust_commit.completion = [i.item() for i in output[0]]\n",
     "model.deeptrust_commit.to_file(\"./happy-gen.json\")\n",
@@ -96,12 +99,13 @@
     {
      "data": {
       "text/plain": [
-       "['float32[1, 18, 4096](73728, 4096, 1)<aa928465160a2bcfd32412cd6b89f643>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<fa6fc26a964eebe8e885a03a64975dc3>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<b9e40dd1771b575c7948658d5c6b69ca>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<f15eb116b1748a119209b27ead0733d3>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<a1788b73b649b1ab7cf111520e0ad429>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<63d0cb508a8ad9f5bcefa99454c0e242>']"
+       "(['float32[1, 18, 4096](73728, 4096, 1)<aa928465160a2bcfd32412cd6b89f643>',\n",
+       "  'float32[1, 1, 4096](4096, 4096, 1)<f4984e739ece7968d92d3b1b612e24a7>',\n",
+       "  'float32[1, 1, 4096](4096, 4096, 1)<29373b36e19d21c349fc0e222d0dcd9a>',\n",
+       "  'float32[1, 1, 4096](4096, 4096, 1)<5aad93b667266d6d9eb7255a8434c0e6>',\n",
+       "  'float32[1, 1, 4096](4096, 4096, 1)<6503ecf7272bda825c241a7f37b9c26b>',\n",
+       "  'float32[1, 1, 4096](4096, 4096, 1)<faea240ad8b86ef2c1f5d6001ccf7314>'],\n",
+       " '1149.36ms')"
       ]
      },
      "execution_count": 3,
@@ -110,7 +114,7 @@
     }
    ],
    "source": [
-    "model.deeptrust_commit.hashes"
+    "model.deeptrust_commit.hashes, f\"{time_taken * 1000:.2f}ms\""
    ]
   },
   {
@@ -119,25 +123,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 23, 4096]) 94208 73728\n",
-      "torch.Size([1, 23, 4096]) 94208 77824\n",
-      "torch.Size([1, 23, 4096]) 94208 81920\n",
-      "torch.Size([1, 23, 4096]) 94208 86016\n",
-      "torch.Size([1, 23, 4096]) 94208 90112\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['float32[1, 18, 4096](73728, 4096, 1)<aa928465160a2bcfd32412cd6b89f643>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<fa6fc26a964eebe8e885a03a64975dc3>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<b9e40dd1771b575c7948658d5c6b69ca>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<f15eb116b1748a119209b27ead0733d3>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<a1788b73b649b1ab7cf111520e0ad429>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<63d0cb508a8ad9f5bcefa99454c0e242>']"
+       "(['float32[1, 18, 4096](73728, 4096, 1)<aa928465160a2bcfd32412cd6b89f643>',\n",
+       "  'float32[1, 1, 4096](4096, 4096, 1)<f4984e739ece7968d92d3b1b612e24a7>',\n",
+       "  'float32[1, 1, 4096](4096, 4096, 1)<29373b36e19d21c349fc0e222d0dcd9a>',\n",
+       "  'float32[1, 1, 4096](4096, 4096, 1)<5aad93b667266d6d9eb7255a8434c0e6>',\n",
+       "  'float32[1, 1, 4096](4096, 4096, 1)<6503ecf7272bda825c241a7f37b9c26b>',\n",
+       "  'float32[1, 1, 4096](4096, 4096, 1)<faea240ad8b86ef2c1f5d6001ccf7314>'],\n",
+       " '136.74ms')"
       ]
      },
      "execution_count": 4,
@@ -148,11 +142,13 @@
    "source": [
     "model.deeptrust_commit.hashes = []\n",
     "\n",
+    "start_time = time.time()\n",
     "with torch.inference_mode():\n",
     "    _ = model(output[:, :-1])\n",
+    "time_taken = time.time() - start_time\n",
     "\n",
     "model.deeptrust_commit.to_file(\"./happy-val.json\")\n",
-    "model.deeptrust_commit.hashes"
+    "model.deeptrust_commit.hashes, f\"{time_taken * 1000:.2f}ms\""
    ]
   },
   {
@@ -190,7 +186,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<|begin_of_text|>What is proto-danksharding and how is it related to eth sharding? What is the difference between proto\n"
+      "<|begin_of_text|>What is proto-danksharding and how is it related to eth sharding? [closed]\n",
+      "I am trying\n"
      ]
     }
    ],
@@ -227,11 +224,11 @@
      "data": {
       "text/plain": [
        "['bfloat16[1, 18, 2048](36864, 2048, 1)<01999b437754b382a5d466021fe4f175>',\n",
-       " 'bfloat16[1, 1, 2048](2048, 2048, 1)<f5c1df2c601a6943daf6504767766e99>',\n",
-       " 'bfloat16[1, 1, 2048](2048, 2048, 1)<9f6093e8ece73bc15bdacaa9f873fb16>',\n",
-       " 'bfloat16[1, 1, 2048](2048, 2048, 1)<d772bcc340ad20e21e1325368fea8108>',\n",
-       " 'bfloat16[1, 1, 2048](2048, 2048, 1)<0f83b21c0a1e072984d81beed14b1532>',\n",
-       " 'bfloat16[1, 1, 2048](2048, 2048, 1)<26e206f6a0a6ab5bc0892762e1fe16b8>']"
+       " 'bfloat16[1, 1, 2048](2048, 2048, 1)<b8093ad5f535245b38533b083f557faa>',\n",
+       " 'bfloat16[1, 1, 2048](2048, 2048, 1)<133b5cd3e1ad0fe6951c6168f26e1aa8>',\n",
+       " 'bfloat16[1, 1, 2048](2048, 2048, 1)<391edd413b779b8fbaba766e3d5c9491>',\n",
+       " 'bfloat16[1, 1, 2048](2048, 2048, 1)<b99ae85b6830c40237a1e64b3d39d830>',\n",
+       " 'bfloat16[1, 1, 2048](2048, 2048, 1)<0d5f40875bd4b4a3e0fc18b22648ae35>']"
       ]
      },
      "execution_count": 7,
@@ -249,25 +246,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 23, 4096]) 94208 73728\n",
-      "torch.Size([1, 23, 4096]) 94208 77824\n",
-      "torch.Size([1, 23, 4096]) 94208 81920\n",
-      "torch.Size([1, 23, 4096]) 94208 86016\n",
-      "torch.Size([1, 23, 4096]) 94208 90112\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "['float32[1, 18, 4096](73728, 4096, 1)<aa928465160a2bcfd32412cd6b89f643>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<e6fdeb0f56fa4f69aa15ceec58e5d5d0>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<7bfc01e4d9f72657e1f33657037954c4>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<747ff6a5eca11c002f328322d635ad69>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<560efd127e41d5fd69dac3c3036cbbd4>',\n",
-       " 'float32[1, 1, 4096](4096, 4096, 1)<1b16647798b96feea6c83ea09ad32b2a>']"
+       " 'float32[1, 1, 4096](4096, 4096, 1)<1c83d87ee63d18103107d38ec2e6e3fb>',\n",
+       " 'float32[1, 1, 4096](4096, 4096, 1)<36bde5c8921867c651dbe30bca4c53ec>',\n",
+       " 'float32[1, 1, 4096](4096, 4096, 1)<956671ea77307971b7787e4009c977c9>',\n",
+       " 'float32[1, 1, 4096](4096, 4096, 1)<1e109293bde0257e2e159845b7193c66>',\n",
+       " 'float32[1, 1, 4096](4096, 4096, 1)<e6c79af5a8ecef316a213aa843978a1c>']"
       ]
      },
      "execution_count": 8,
@@ -294,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
